--- a/about/index.html
+++ b/about/index.html
@@ -149,7 +149,7 @@ This article does not have a corresponding language version
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>Posts</div><div class="sidebar-state-number">4</div>
+    <div>Posts</div><div class="sidebar-state-number">5</div>
   </div>
   <a class="sidebar-state-category" href="/categories/" aria-label="sidebar-state-category-link">
     <div>Categories</div>
@@ -159,7 +159,7 @@ This article does not have a corresponding language version
   </a>
   <a class="sidebar-state-tag" href="/tags/" aria-label="sidebar-state-tag-link">
     <div>Tags</div>
-    <div class="sidebar-state-number">4</div>
+    <div class="sidebar-state-number">5</div>
   </a>
 </div>
 <div class="sidebar-social"></div>
@@ -221,6 +221,14 @@ This article does not have a corresponding language version
         <ul class="tag-list" itemprop="keywords"><li class="tag-item">
                 <a
                   class="tag-link"
+                  href="/tags/android/"
+                  aria-label="Tag: Android"
+                >
+                  Android
+                </a>
+              </li><li class="tag-item">
+                <a
+                  class="tag-link"
                   href="/tags/dfir/"
                   aria-label="Tag: DFIR"
                 >
@@ -260,6 +268,11 @@ This article does not have a corresponding language version
   >
     <h3 class="widget-title">Tag Cloud</h3><div class="widget tagcloud"><a
             style="font-size:10px"
+            href="/tags/android/"
+            aria-label="Tag: Android"
+            >Android</a
+          ><a
+            style="font-size:10px"
             href="/tags/dfir/"
             aria-label="Tag: DFIR"
             >DFIR</a
@@ -288,6 +301,8 @@ This article does not have a corresponding language version
       <h3 class="widget-title">Recent Posts</h3>
       <div class="widget">
         <ul><li>
+              <a href="/post/htb-droidphish/">HTB-DroidPhish</a>
+            </li><li>
               <a href="/post/htb-meerkat/">HTB Meerkat</a>
             </li><li>
               <a href="/post/htb-pikaptcha/">HTB Pikaptcha</a>
@@ -348,10 +363,10 @@ This article does not have a corresponding language version
         >
       </div><div>
         <span class="icon-brush"
-          >&nbsp;4.0k</span
+          >&nbsp;4.8k</span
         >
         &nbsp;|&nbsp;
-        <span class="icon-coffee">&nbsp;00:20</span>
+        <span class="icon-coffee">&nbsp;00:24</span>
       </div><div>
         <span class="icon-eye"></span>
         <span id="busuanzi_container_site_pv"
@@ -385,7 +400,7 @@ This article does not have a corresponding language version
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>Posts</div><div class="sidebar-state-number">4</div>
+    <div>Posts</div><div class="sidebar-state-number">5</div>
   </div>
   <a class="sidebar-state-category" href="/categories/" aria-label="sidebar-state-category-link">
     <div>Categories</div>
@@ -395,7 +410,7 @@ This article does not have a corresponding language version
   </a>
   <a class="sidebar-state-tag" href="/tags/" aria-label="sidebar-state-tag-link">
     <div>Tags</div>
-    <div class="sidebar-state-number">4</div>
+    <div class="sidebar-state-number">5</div>
   </a>
 </div>
 <div class="sidebar-social"></div>
