--- a/about/index.html
+++ b/about/index.html
@@ -149,7 +149,7 @@ This article does not have a corresponding language version
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>Posts</div><div class="sidebar-state-number">12</div>
+    <div>Posts</div><div class="sidebar-state-number">13</div>
   </div>
   <a class="sidebar-state-category" href="/categories/" aria-label="sidebar-state-category-link">
     <div>Categories</div>
@@ -340,6 +340,8 @@ This article does not have a corresponding language version
       <h3 class="widget-title">Recent Posts</h3>
       <div class="widget">
         <ul><li>
+              <a href="/post/htb-flight/">HTB Flight</a>
+            </li><li>
               <a href="/post/htb-constellation/">HTB Constellation</a>
             </li><li>
               <a href="/post/htb-takedown/">HTB-Takedown</a>
@@ -347,8 +349,6 @@ This article does not have a corresponding language version
               <a href="/post/htb-compromised/">HTB Compromised</a>
             </li><li>
               <a href="/post/htb-object/">HTB-Object</a>
-            </li><li>
-              <a href="/post/htb-optinseltrace24-4-neural_noel/">HTB OpTinselTrace24-4:Neural Noel</a>
             </li></ul>
       </div>
     </div>
@@ -402,10 +402,10 @@ This article does not have a corresponding language version
         >
       </div><div>
         <span class="icon-brush"
-          >&nbsp;9.4k</span
+          >&nbsp;12.1k</span
         >
         &nbsp;|&nbsp;
-        <span class="icon-coffee">&nbsp;00:49</span>
+        <span class="icon-coffee">&nbsp;01:02</span>
       </div><div>
         <span class="icon-eye"></span>
         <span id="busuanzi_container_site_pv"
@@ -439,7 +439,7 @@ This article does not have a corresponding language version
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>Posts</div><div class="sidebar-state-number">12</div>
+    <div>Posts</div><div class="sidebar-state-number">13</div>
   </div>
   <a class="sidebar-state-category" href="/categories/" aria-label="sidebar-state-category-link">
     <div>Categories</div>
